# angular-app/SeaDuel/src/swagger/api/games.service.ts
@@ -23,7 +23,9 @@ import { CustomHttpUrlEncodingCodec } from "../encoder";
 
 import { Observable } from "rxjs";
 
+import { Boat } from "../model/boat";
 import { Game } from "../model/game";
+import { Move } from "../model/move";
 
 import { BASE_PATH, COLLECTION_FORMATS } from "../variables";
 import { Configuration } from "../configuration";
@@ -62,6 +64,91 @@ export class GamesService {
       }
     }
     return false;
+  }
+
+  /**
+   *
+   * Adds a new boat during initial positioning
+   * @param id The user id of the opponent
+   * @param body The boat to add
+   * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+   * @param reportProgress flag to report request and response progress.
+   */
+  public usersByIdIdGameBoatsPost(
+    id: string,
+    body: Boat,
+    observe?: "body",
+    reportProgress?: boolean
+  ): Observable<any>;
+  public usersByIdIdGameBoatsPost(
+    id: string,
+    body: Boat,
+    observe?: "response",
+    reportProgress?: boolean
+  ): Observable<HttpResponse<any>>;
+  public usersByIdIdGameBoatsPost(
+    id: string,
+    body: Boat,
+    observe?: "events",
+    reportProgress?: boolean
+  ): Observable<HttpEvent<any>>;
+  public usersByIdIdGameBoatsPost(
+    id: string,
+    body: Boat,
+    observe: any = "body",
+    reportProgress: boolean = false
+  ): Observable<any> {
+    if (id === null || id === undefined) {
+      throw new Error(
+        "Required parameter id was null or undefined when calling usersByIdIdGameBoatsPost."
+      );
+    }
+    if (body === null || body === undefined) {
+      throw new Error(
+        "Required parameter body was null or undefined when calling usersByIdIdGameBoatsPost."
+      );
+    }
+
+    let headers = this.defaultHeaders;
+
+    // authentication (Bearer) required
+    if (this.configuration.apiKeys["Authorization"]) {
+      headers = headers.set(
+        "Authorization",
+        this.configuration.apiKeys["Authorization"]
+      );
+    }
+
+    // to determine the Accept header
+    const httpHeaderAccepts: string[] = ["application/json"];
+    const httpHeaderAcceptSelected:
+      | string
+      | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+    if (httpHeaderAcceptSelected !== undefined) {
+      headers = headers.set("Accept", httpHeaderAcceptSelected);
+    }
+
+    // to determine the Content-Type header
+    const consumes: string[] = ["application/json"];
+    const httpContentTypeSelected:
+      | string
+      | undefined = this.configuration.selectHeaderContentType(consumes);
+    if (httpContentTypeSelected !== undefined) {
+      headers = headers.set("Content-Type", httpContentTypeSelected);
+    }
+
+    return this.httpClient.post<any>(
+      `${this.basePath}/users/byId/${encodeURIComponent(
+        String(id)
+      )}/game/boats`,
+      body,
+      {
+        withCredentials: this.configuration.withCredentials,
+        headers: headers,
+        observe: observe,
+        reportProgress: reportProgress
+      }
+    );
   }
 
   /**
@@ -198,6 +285,91 @@ export class GamesService {
 
   /**
    *
+   * Fires a shot into the opponent board
+   * @param id The user id of the opponent
+   * @param body The boat to add
+   * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+   * @param reportProgress flag to report request and response progress.
+   */
+  public usersByIdIdGameMovesPost(
+    id: string,
+    body: Move,
+    observe?: "body",
+    reportProgress?: boolean
+  ): Observable<any>;
+  public usersByIdIdGameMovesPost(
+    id: string,
+    body: Move,
+    observe?: "response",
+    reportProgress?: boolean
+  ): Observable<HttpResponse<any>>;
+  public usersByIdIdGameMovesPost(
+    id: string,
+    body: Move,
+    observe?: "events",
+    reportProgress?: boolean
+  ): Observable<HttpEvent<any>>;
+  public usersByIdIdGameMovesPost(
+    id: string,
+    body: Move,
+    observe: any = "body",
+    reportProgress: boolean = false
+  ): Observable<any> {
+    if (id === null || id === undefined) {
+      throw new Error(
+        "Required parameter id was null or undefined when calling usersByIdIdGameMovesPost."
+      );
+    }
+    if (body === null || body === undefined) {
+      throw new Error(
+        "Required parameter body was null or undefined when calling usersByIdIdGameMovesPost."
+      );
+    }
+
+    let headers = this.defaultHeaders;
+
+    // authentication (Bearer) required
+    if (this.configuration.apiKeys["Authorization"]) {
+      headers = headers.set(
+        "Authorization",
+        this.configuration.apiKeys["Authorization"]
+      );
+    }
+
+    // to determine the Accept header
+    const httpHeaderAccepts: string[] = ["application/json"];
+    const httpHeaderAcceptSelected:
+      | string
+      | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+    if (httpHeaderAcceptSelected !== undefined) {
+      headers = headers.set("Accept", httpHeaderAcceptSelected);
+    }
+
+    // to determine the Content-Type header
+    const consumes: string[] = ["application/json"];
+    const httpContentTypeSelected:
+      | string
+      | undefined = this.configuration.selectHeaderContentType(consumes);
+    if (httpContentTypeSelected !== undefined) {
+      headers = headers.set("Content-Type", httpContentTypeSelected);
+    }
+
+    return this.httpClient.post<any>(
+      `${this.basePath}/users/byId/${encodeURIComponent(
+        String(id)
+      )}/game/moves`,
+      body,
+      {
+        withCredentials: this.configuration.withCredentials,
+        headers: headers,
+        observe: observe,
+        reportProgress: reportProgress
+      }
+    );
+  }
+
+  /**
+   *
    * Send a new game request to an user
    * @param id The user id of the opponent
    * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
@@ -265,44 +437,34 @@ export class GamesService {
 
   /**
    *
-   * Update the game state
+   * Accept a game request
    * @param id The user id of the opponent
-   * @param body The game data to update
    * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
    * @param reportProgress flag to report request and response progress.
    */
   public usersByIdIdGamePut(
     id: string,
-    body: Game,
     observe?: "body",
     reportProgress?: boolean
-  ): Observable<Game>;
+  ): Observable<any>;
   public usersByIdIdGamePut(
     id: string,
-    body: Game,
     observe?: "response",
     reportProgress?: boolean
-  ): Observable<HttpResponse<Game>>;
+  ): Observable<HttpResponse<any>>;
   public usersByIdIdGamePut(
     id: string,
-    body: Game,
     observe?: "events",
     reportProgress?: boolean
-  ): Observable<HttpEvent<Game>>;
+  ): Observable<HttpEvent<any>>;
   public usersByIdIdGamePut(
     id: string,
-    body: Game,
     observe: any = "body",
     reportProgress: boolean = false
   ): Observable<any> {
     if (id === null || id === undefined) {
       throw new Error(
         "Required parameter id was null or undefined when calling usersByIdIdGamePut."
-      );
-    }
-    if (body === null || body === undefined) {
-      throw new Error(
-        "Required parameter body was null or undefined when calling usersByIdIdGamePut."
       );
     }
 
@@ -327,16 +489,10 @@ export class GamesService {
 
     // to determine the Content-Type header
     const consumes: string[] = ["application/json"];
-    const httpContentTypeSelected:
-      | string
-      | undefined = this.configuration.selectHeaderContentType(consumes);
-    if (httpContentTypeSelected !== undefined) {
-      headers = headers.set("Content-Type", httpContentTypeSelected);
-    }
 
-    return this.httpClient.put<Game>(
+    return this.httpClient.put<any>(
       `${this.basePath}/users/byId/${encodeURIComponent(String(id))}/game`,
-      body,
+      null,
       {
         withCredentials: this.configuration.withCredentials,
         headers: headers,
