# angular-app/SeaDuel/src/swagger/model/gameAvailableBoats.ts
@@ -1,0 +1,29 @@
+/**
+ * SeaDuelServer
+ * SeaDuelServer
+ *
+ * OpenAPI spec version: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+export interface GameAvailableBoats {
+  type?: GameAvailableBoats.TypeEnum;
+  amount?: number;
+}
+export namespace GameAvailableBoats {
+  export type TypeEnum =
+    | "Destroyer"
+    | "Submarine"
+    | "Battleship"
+    | "AircraftCarrier";
+  export const TypeEnum = {
+    Destroyer: "Destroyer" as TypeEnum,
+    Submarine: "Submarine" as TypeEnum,
+    Battleship: "Battleship" as TypeEnum,
+    AircraftCarrier: "AircraftCarrier" as TypeEnum
+  };
+}
