# angular-app/SeaDuel/src/swagger/model/models.ts
@@ -1,8 +1,12 @@
-export * from "./newUser";
 export * from "./authObject";
+export * from "./boat";
 export * from "./game";
-export * from "./gameBoard";
+export * from "./gameAvailableBoats";
 export * from "./login";
 export * from "./message";
 export * from "./messageObject";
+export * from "./move";
+export * from "./newUser";
+export * from "./opponentBoard";
+export * from "./playerBoard";
 export * from "./user";
