# backend/SeaDuelServer/server/api/services/db.service.ts
@@ -1,5 +1,5 @@
 import { connect } from "mongoose";
-import { prop, Typegoose, arrayProp, Ref } from "typegoose";
+import { prop, Typegoose, arrayProp } from "typegoose";
 
 export class User extends Typegoose {
   @prop({ required: true, unique: true })
@@ -45,20 +45,19 @@ export enum BoardElementType {
   Destroyer = "Destroyer",
   Submarine = "Submarine",
   Battleship = "Battleship",
-  AircraftCarrier = "AircraftCarrier",
-  Hidden = "Hidden"
+  AircraftCarrier = "AircraftCarrier"
 }
 
-export class BoardElement extends Typegoose {
+export class BoardElement {
   @prop({ enum: BoardElementType })
   type: BoardElementType;
   @prop()
   checked: boolean;
 }
 
-export class GameBoard extends Typegoose {
-  @arrayProp({ itemsRef: BoardElement })
-  boardData: Ref<BoardElement>[][];
+export class GameBoard {
+  @arrayProp({ items: BoardElement })
+  boardData: BoardElement[];
   @prop({ default: 10 })
   width: number;
   @prop({ default: 10 })
@@ -67,11 +66,17 @@ export class GameBoard extends Typegoose {
 
 export enum GameStateType {
   WaitingForResponse = "WaitingForResponse",
-  Rejected = "Rejected",
   BoatsPositioning = "BoatsPositioning",
   PlayerTurn = "PlayerTurn",
   OpponentTurn = "OpponentTurn",
   Ended = "Ended"
+}
+
+export class Boat {
+  @prop({ enum: BoardElementType })
+  type: BoardElementType;
+  @prop()
+  amount: number;
 }
 
 export class Game extends Typegoose {
@@ -83,21 +88,24 @@ export class Game extends Typegoose {
   opponentId: string;
   @prop()
   winnerId: string;
-  @prop({ ref: GameBoard })
-  playerBoard: Ref<GameBoard>;
-  @prop({ ref: GameBoard })
-  opponentBoard: Ref<GameBoard>;
+  @prop()
+  playerBoard: GameBoard;
+  @prop()
+  opponentBoard: GameBoard;
   @prop()
   playerReady: boolean;
   @prop()
   opponentReady: boolean;
   @prop()
   startTime: string;
+  @arrayProp({ items: Boat })
+  playerAvailableBoats: Boat[];
+  @arrayProp({ items: Boat })
+  opponentAvailableBoats: Boat[];
 }
 
 export const UserModel = new User().getModelForClass(User);
 export const GameModel = new Game().getModelForClass(Game);
-export const GameBoardModel = new GameBoard().getModelForClass(GameBoard);
 export const MessageModel = new Message().getModelForClass(Message);
 
 export default class DbService {
